deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: nodejs
  creationTimestamp: null
  labels:
    app: nodejs-deploy
  name: nodejs-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodejs-deploy
    spec:
      containers:
        - image: nodejs
          name: nodejs
          ports:
            - containerPort: 3000
          resources: {}
status: {}
