deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nodejs
  creationTimestamp: null
  labels:
    app: nodejs-deploy
  name: nodejs-deploy
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: nodejs-deploy
  type: ClusterIP
status:
  loadBalancer: {}
