deploy/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "nodejs"
  namespace: nodejs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - nodejs.sarson.me
      secretName: nodejs-sarson-me-tls
  rules:
    - host: nodejs.sarson.me
      http:
        paths:
          - backend:
              serviceName: nodejs-deploy
              servicePort: 3000
